# libjson-c

./: CMakeLists.txt
include/json/: json.h
src/: array.c  boolean.c  internal.h  library.c  null.c  number.c  object.c  string.c  string_utils.c
tests/: main.c
